--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "evolucore:dev": "pnpm run --filter play dev",
     "build:evolucore": "gulp -f packages/components/script/build/index.ts",
     "publish:evolucore": "gulp -f packages/components/script/publish/index.ts",
     "docs:dev": "pnpm run --filter site docs:dev",
@@ -22,6 +23,8 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "@vitejs/plugin-vue": "^4.2.2",
+    "@vitest/coverage-c8": "^0.31.1",
+    "@vue/compiler-sfc": "^3.3.4",
     "@vue/runtime-core": "^3.3.1",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
@@ -30,14 +33,17 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-less": "^5.0.0",
+    "happy-dom": "^9.19.2",
     "less": "^4.1.3",
     "prettier": "^2.8.8",
+    "prismjs": "^1.29.0",
     "release-it": "^15.10.3",
     "sucrase": "^3.32.0",
     "typescript": "^5.0.4",
     "unplugin-vue-define-options": "^1.3.5",
     "vite": "^4.3.5",
     "vite-plugin-dts": "1.4.1",
+    "vitest": "^0.31.1",
     "vue": "^3.2.36"
   }
 }
