--- a/play/package.json
+++ b/play/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,9 @@
     "vite": "^4.3.8"
   },
   "dependencies": {
-    "@EvoluCore/components": "workspace:^"
+    "@EvoluCore/components": "workspace:^",
+    "@evolucore/mylib": "workspace:^",
+    "create-evolucore": "workspace:^",
+    "element-plus": "^2.4.4"
   }
 }
